--- a/Resources/debug_config.json
+++ b/Resources/debug_config.json
@@ -2,9 +2,6 @@
 	"stats":false,
 	"debug_mask":false,
 	"invincible_mode":false,
-    "crypt":{
-        "save":false,
-        "event_script":false,
-        "csv":false
-    }
+    "plain_data":true,
+    "crypt_trigger":false
 }
