--- a/6chefs2.cfg
+++ b/6chefs2.cfg
@@ -1,9 +1,9 @@
 <SolutionConfig Version="3.10.0.0">
-  <PublishDirectory Value="Resources/res/" />
+  <PublishDirectory Value="Resources/csb/" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
-  <SolutionSize Value="960 * 640" />
-  <ResolutionName Value="iPhone 4/4S" />
+  <SolutionSize Value="800 * 600" />
+  <ResolutionName Value="PC" />
   <DefaultSerializer Value="Serializer_FlatBuffers" />
   <CustomSerializer Value="Serializer_FlatBuffers" />
   <IsNameStandardized Value="False" />
